[gd_scene load_steps=5 format=3 uid="uid://dt3tlsxa6p101"]

[ext_resource type="Theme" uid="uid://uhqp7ot0pvfk" path="res://assets/ui-theme.tres" id="1_22udq"]
[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="2_jp2bh"]
[ext_resource type="FontFile" uid="uid://dainvdbpyi8wi" path="res://assets/fonts/open-sans/open-sans-bold.ttf" id="3_i2akh"]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("3_i2akh")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_22udq")
script = ExtResource("2_jp2bh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.396078, 0.478431, 0.529412, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -339.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("5")
text = "Game Title"
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -26.0
offset_right = 100.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "Start Game"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "Option"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
text = "Exit Game"

[node name="Version" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -90.0
offset_right = 198.0
offset_bottom = -18.0

[node name="GameVersion" type="Label" parent="Version"]
layout_mode = 2
text = "<x.y.z>"

[node name="GodotVersion" type="Label" parent="Version"]
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0.92549, 0.92549, 1)
text = "<GodotVersion>"

[node name="Credits" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -90.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="MadeByLabel" type="Label" parent="Credits"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "made by:"

[node name="Developer1" type="Label" parent="Credits"]
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0.92549, 0.92549, 1)
text = "ky.buivan"

[node name="Developer2" type="Label" parent="Credits"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.87451, 0.87451, 1)
text = "Developer 2"

[node name="Developer3" type="Label" parent="Credits"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.87451, 0.87451, 1)
text = "Developer 3"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
